--- a/interface/pages/index.html
+++ b/interface/pages/index.html
@@ -112,6 +112,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Script personalizzato -->
     <script src="../script.js"></script>
+    <!-- Script del Protocollo -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.1.0/paho-mqtt.min.js"></script>
+
+
+
     
 </body>
 
