--- a/interface/pages/index.html
+++ b/interface/pages/index.html
@@ -135,12 +135,13 @@
         </div>
     </footer>
 
+    <!-- Script del Protocollo -->
+    <script src="https://unpkg.com/paho-mqtt@1.1.0/paho-mqtt.js"></script>
     <!-- Script di Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Script personalizzato -->
     <script src="../script.js"></script>
-    <!-- Script del Protocollo -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.1.0/paho-mqtt.min.js"></script>
+    
 </body>
 
 </html>
